# AGENTLEARNING

./: Aboutme.md  MECHANICAL_KEYBOARD_REPORT.md  Project.md  Project8_ProductOpportunityAgent.md  ProjectRecommendations.md  README.md  SYSTEM_DESCRIPTION.md  initial_snapshot.txt
product_scout_ai/: .env.example  .gitignore  AGENT_LOGGING_SUMMARY.md  CODE_ARCHITECTURE.md  DEVELOPMENT_TODOLIST.md  FINAL_FIX_REPORT.md  ParallelAgent错误修复总结.md  README.md  debug_complete.py  debug_imports.py  debug_ui_imports.py  diagnose_agent_execution.py  diagnose_agents.py  fix_agents_import.py  fix_runner_results.py  manual_runner_fix.py  pyproject.toml  requirements.txt  run_app.py  run_ui.py  start_service.py  test_adk_simple.py  test_childrens_clothing.py  test_final_imports.py  test_fixed_runner.py  test_gradio_simple.py  test_integration_basic.py  test_minimal.py  test_parallel_agent_fix.py  test_performance.py  test_port_handler.py  test_simple_agent.py  test_tv_e2e.py  启动指南.md  最终修复总结.md  最终启动解决方案.py  端口冲突处理使用指南.md  运行问题分析报告.md  问题解决总结.md
product_scout_ai/data/: analysis_history.json  test_persistence_simple.py
product_scout_ai/docs/: adk_enhanced_logging.md  backend_call_flow_analysis.md  fix_summary.md  problem_resolution_summary.md
product_scout_ai/examples/: adk_logging_demo.py
product_scout_ai/reports/: labubu_US_20251201_014202.json  labubu_US_20251201_014202.md  充电宝_US_20251130_140355.json  充电宝_US_20251130_140355.md  充电宝_US_20251201_001158.json  充电宝_US_20251201_001158.md  手机支架_US_20251129_174459.json  手机支架_US_20251129_174459.md  智能手机配件_US_20251130_130102.json  智能手机配件_US_20251130_130102.md  机械键盘_US_20251201_002707.json  机械键盘_US_20251201_002707.md  电视_US_20251129_171319.json  电视_US_20251129_171319.md  电视_US_20251129_172500.json  电视_US_20251129_172500.md  电视_US_20251129_173648.json  电视_US_20251129_173648.md  电视_US_20251129_173728.json  电视_US_20251129_173728.md  童装_US_20251129_172759.json  童装_US_20251129_172759.md
product_scout_ai/src/: __init__.py
product_scout_ai/src/agents/: __init__.py  analysis_agents.py  base_agent.py  evaluator_agents.py  orchestrator.py
product_scout_ai/src/cli/: __init__.py  main.py
product_scout_ai/tests/: conftest.py
(+70 files in other folders)
